force-app/main/default/objects/sugati__Where_to_go__c/sugati__Where_to_go__c.object-meta.xml
<CustomObject>
    <description>Places / Cities</description>
    <label>Where to go</label>
    <nameField>
        <label>Where to go Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Where to go</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>