force-app/main/default/objects/sugati__Where_to_go__c/fields/sugati__S_WTG_Sugati_Data__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_WTG_Sugati_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sugati Data</label>
    <type>Checkbox</type>
</CustomField>