force-app/main/default/objects/sugati__Where_to_go__c/fields/sugati__W_Archive__c.field-meta.xml
<CustomField>
    <fullName>sugati__W_Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archive</label>
    <type>Checkbox</type>
</CustomField>