force-app/main/default/objects/sugati__Where_to_go__c/fields/sugati__W_Continent__c.field-meta.xml
<CustomField>
    <fullName>sugati__W_Continent__c</fullName>
    <formula>sugati__W_Country__r.sugati__C_Continent__r.Name</formula>
    <label>Continent</label>
    <type>Text</type>
</CustomField>