force-app/main/default/objects/sugati__Where_to_go__c/fields/sugati__W_Country__c.field-meta.xml
<CustomField>
    <fullName>sugati__W_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>sugati__Country__c</referenceTo>
    <relationshipLabel>Where to go</relationshipLabel>
    <relationshipName>Where_to_go</relationshipName>
    <type>Lookup</type>
</CustomField>