force-app/main/default/objects/sugati__Where_to_go__c/fields/sugati__W_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__W_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>