force-app/main/default/objects/sugati__Where_to_go__c/fields/sugati__W_Duration__c.field-meta.xml
<CustomField>
    <fullName>sugati__W_Duration__c</fullName>
    <inlineHelpText>In Day&apos;s</inlineHelpText>
    <label>Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>