force-app/main/default/objects/sugati__Where_to_go__c/fields/sugati__W_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__W_Estimated_Cost__c</fullName>
    <inlineHelpText>In ORG currency</inlineHelpText>
    <label>Estimated Cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>