force-app/main/default/objects/sugati__Where_to_go__c/fields/sugati__W_Holiday_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__W_Holiday_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holiday Type</label>
    <referenceTo>sugati__Holiday_Type__c</referenceTo>
    <relationshipLabel>Where to go</relationshipLabel>
    <relationshipName>Where_to_go</relationshipName>
    <type>Lookup</type>
</CustomField>