force-app/main/default/objects/sugati__Where_to_go__c/fields/sugati__W_Latitude__c.field-meta.xml
<CustomField>
    <fullName>sugati__W_Latitude__c</fullName>
    <label>Latitude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>