force-app/main/default/objects/sugati__Where_to_go__c/fields/sugati__W_Region__c.field-meta.xml
<CustomField>
    <fullName>sugati__W_Region__c</fullName>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>