force-app/main/default/objects/sugati__Where_to_go__c/fields/sugati__W_Where_to_go__c.field-meta.xml
<CustomField>
    <fullName>sugati__W_Where_to_go__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Parent Where to Go location (This is San Francisco, if the top Where to Go is Fisherman Wharf)</inlineHelpText>
    <label>Where to go</label>
    <referenceTo>sugati__Where_to_go__c</referenceTo>
    <relationshipLabel>Where to go</relationshipLabel>
    <relationshipName>Where_to_go</relationshipName>
    <type>Lookup</type>
</CustomField>