force-app/main/default/objects/sugati__Where_to_go__c/fields/sugati__W_Widgety_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__W_Widgety_Last_Updated_Date__c</fullName>
    <label>Widgety Last Updated Date</label>
    <type>DateTime</type>
</CustomField>