force-app/main/default/objects/sugati__Where_to_go__c/fields/sugati__W_Widgety_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>sugati__W_Widgety_Reference_ID__c</fullName>
    <externalId>true</externalId>
    <label>Widgety Reference ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>