force-app/main/default/objects/sugati__Where_to_go__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>NAME</columns>
    <columns>sugati__W_Archive__c</columns>
    <columns>sugati__W_Continent__c</columns>
    <columns>sugati__W_Country__c</columns>
    <columns>sugati__W_Interest__c</columns>
    <columns>sugati__W_When__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>